--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,12 @@ demo/demodesk/media/helpdesk/attachments/DH-3/4/*
 !demo/demodesk/media/helpdesk/attachments/DH-3/3/someinfo.txt
 !demo/demodesk/media/helpdesk/attachments/DH-3/4/helpdesk.png
 
+**/settings.py
+*.swp
+.env/
+.env_old/
+backup_db.sh
+shell.history
+*.sqlite*
+*/secrets.py
+
