'secrets' is a built in module. changed to 'ssecrets'

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ demo/demodesk/media/helpdesk/attachments/DH-3/4/*
 backup_db.sh
 shell.history
 *.sqlite*
-*/secrets.py
+*/ssecrets.py
 
 ftpconfigs/
 .ftpconfig
